cabal-version:      >=1.10
name:               network-run
version:            0.4.3
license:            BSD3
license-file:       LICENSE
maintainer:         kazu@iij.ad.jp
author:             Kazu Yamamoto
synopsis:           Simple network runner library
description:        Simple functions to run network clients and servers.
category:           Network
build-type:         Simple
extra-source-files: CHANGELOG.md

source-repository head
    type:     git
    location: https://github.com/kazu-yamamoto/network-run

library
    exposed-modules:
        Network.Run.TCP
        Network.Run.TCP.Timeout
        Network.Run.UDP

    other-modules:    Network.Run.Core
    default-language: Haskell2010
    build-depends:
        base >=4 && <5,
        bytestring,
        network >=3.2.4,
        time-manager >=0.2 && <0.3
